# nanoGPT_GE

./: benchmark_attention.py  benchmark_low_rank_multiplication.py  low_rank.py  low_rank_train.py  model_low_rank.py  pyproject.toml  timers.py  timings.txt
config/: train_shakespeare_char.py
data/shakespeare/: prepare.py
